[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhan-mcp-trades"
version = "1.0.0"
description = "AI-powered trading assistant for DhanHQ broker built with Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rahul MR", email = "10260232+rahulmr@users.noreply.github.com"},
]
keywords = ["trading", "dhan", "mcp", "ai", "finance", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "mcp>=1.0.0",
    "mcp[cli]>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/rahulmr/Dhan-MCP-Trades"
Repository = "https://github.com/rahulmr/Dhan-MCP-Trades"
Issues = "https://github.com/rahulmr/Dhan-MCP-Trades/issues"

[project.scripts]
dhan-mcp = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true